# SWMCP

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mgk_sft_with_trl.ipynb  pyproject.toml
.github/workflows/: ci.yml  release.yml
swmcp/: __init__.py  cli.py
swmcp/agents/: __init__.py  orchestrator.py
swmcp/auth/: __init__.py  setup.py
swmcp/gui/: __init__.py  main.py
swmcp/server/: __init__.py  main.py
swmcp/storage/: __init__.py  setup.py
swmcp/tools/: __init__.py  files.py  process.py  registry.py  terminal.py
swmcp_rs/: Cargo.toml
swmcp_rs/src/: diff.rs  lib.rs  ssh.rs  terminal.rs
tests/: __init__.py  conftest.py  test_rust_extension.py  test_server.py
tests/benchmarks/: test_performance.py
tests/integration/: test_e2e.py
