[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "swmcp"
version = "0.1.0"
description = "High-performance fastmcp 3.2 port with Rust extensions, CUDA acceleration, and PQC hardening"
authors = [
    {name = "SBSCRPT Corp", email = "engineering@sbscrpt.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "mcp",
    "model-context-protocol",
    "fastmcp",
    "rust",
    "cuda",
    "pqc",
    "langgraph",
    "multiagent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]

dependencies = [
    "fastmcp>=3.2.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "asyncssh>=2.14.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-mcp>=0.1.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "tpm2-pytss>=2.2.0",
    "wolfcrypt-py>=5.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
]

cuda = [
    "torch>=2.4.0+cu132",
    "intel-extension-for-pytorch>=2.4.0",
]

mkl = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "intel-extension-for-sklearn>=2024.7.0",
]

[project.urls]
Homepage = "https://github.com/blkout-hd/SWMCP"
Repository = "https://github.com/blkout-hd/SWMCP"
Issues = "https://github.com/blkout-hd/SWMCP/issues"
Documentation = "https://github.com/blkout-hd/SWMCP/blob/main/README.md"

[project.scripts]
swmcp = "swmcp.cli:main"
swmcp-server = "swmcp.server:main"
swmcp-gui = "swmcp.gui:main"

[tool.maturin]
module-name = "swmcp._swmcp_rs"
features = ["pyo3/extension-module"]
python-source = "python"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | target
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "tpm2_pytss.*",
    "wolfcrypt.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["swmcp"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
