[package]
name = "swmcp-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_swmcp_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
tokio.workspace = true
async-ssh2-tokio.workspace = true
similar.workspace = true
thrussh.workspace = true
thrussh-keys.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["pyo3/extension-module"]
